{
    "name": "Inputs",
    "maps": [
        {
            "name": "GamePlay",
            "id": "6df264c4-269f-4e89-be14-70a122a57c21",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "b3e9643c-bdd1-48f1-9fa0-714ceea338d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun1",
                    "type": "Button",
                    "id": "49e46e29-aa50-45ff-9a78-b4c851b3594d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun2",
                    "type": "Button",
                    "id": "84cd72b9-d6df-4fa8-b23e-e8afec89eb0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeGun3",
                    "type": "Button",
                    "id": "dd236a65-35b0-48f0-a98e-4388bce87cae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc8ba903-d05a-4b08-9c74-f594c4d9c761",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78bc35e7-fedc-4e34-b0b5-bf30d4a2a0d2",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07673c2f-d68b-4e8c-849b-807ce418a712",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b7ab6de-47b1-47b6-9c8d-8d2556dab866",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeGun3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}